--- a/general.css
+++ b/general.css
@@ -109,7 +109,7 @@ form {
 .footer {
     float: left;
     display: block;
-    margin-top: 12%;
+    margin-top: 100%;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -322,7 +322,7 @@ hr {
 }
 /* ====================  TABLE STYLING ================== */
 
-/* ====================  RESIZING  ================== */
+/* ====================  RESPONSIVE RESIZING  ================== */
 @media (max-width: 1150px) {
     .image__about img {
         float: none;
@@ -338,10 +338,6 @@ hr {
         margin-left: 60%;
         margin-right: 0%;
     }
-    .footer {
-        margin-top: 12%;
-    }
-
 }
 
 @media (min-width: 1150px) {
@@ -359,14 +355,14 @@ hr {
         margin-left: auto;
         margin-right: auto;
     }
-    .footer {
-        margin-top: 5%;
-    }
 }
 
 @media (max-width: 1000px) {
     .nav--right {
         display: none;
+    }
+    .footer {
+        margin-top: 20%;
     }
 }
 
@@ -382,4 +378,14 @@ hr {
     }
 }
 
-/* ====================  RESIZING  ================== */
+@media (max-width: 1700px) {
+    .footer {
+        margin-top: 20%;
+    }
+}
+
+@media (min-width: 1700px) {
+    .footer {
+        position: fixed;
+    }
+}
